correction gap boxs

--- a/css/style.css
+++ b/css/style.css
@@ -148,7 +148,7 @@ li:hover > .border-bottom{
 
 .section2{
     margin-bottom: 20px;
-    column-gap: 40px;
+    column-gap: 20px;
     flex-flow: row nowrap;
     justify-content: flex-start;
     padding:0 20px;
@@ -157,7 +157,7 @@ li:hover > .border-bottom{
 
 .section3{
     margin-bottom: 20px;
-    column-gap: 40px;
+    column-gap: 20px;
     flex-flow: row nowrap;
     justify-content: flex-start;
     padding:0 20px;
